# JSONBrotliMinifyer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  context7.json  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: ci.yml  deploy.yml
docs/: api.md  cli.md  index.md  installation.md  usage.md
jsonbrotliminifyer/: __init__.py  __main__.py
tests/: test_jsonbrotliminifyer.py
