[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonbrotliminifyer"
version = "0.3.0"
description = "A Python library for compressing and decompressing JSON data using Brotli"
authors = [
    {name = "Egor Serdiuk", email = "egor.serduck@gmail.com"},
]
dependencies = [
    "brotli>=1.0.0",
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/egorserdyuk/JSONBrotliMinifyer"
Repository = "https://github.com/egorserdyuk/JSONBrotliMinifyer.git"